# TileMEM

./: .gitignore  CITATION.cff  CLAIM_CHECKLIST.md  CMakeLists.txt  Makefile  PRIORITY_DISCLOSURE.md  README.md  RELEASE_NOTES.md
TMAP/: README.md
publish/TileMEM_TilePO_V0_1_20260611/: .gitattributes  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  PRIORITY_DISCLOSURE.md  README.md  SHA256SUMS  pyproject.toml
publish/TileMEM_TilePO_V0_1_20260611/SKILL/tilemem-acceleration-path/: SKILL.md
publish/TileMEM_TilePO_V0_1_20260611/TMAP/hardware_profiles/: rtx5090_ddr.json
publish/TileMEM_TilePO_V0_1_20260611/TMAP/tmap/: predictor.py  report.py
publish/TileMEM_TilePO_V0_1_20260611/configs/: tilepo_olmoe_bf16_only.tmem
publish/TileMEM_TilePO_V0_1_20260611/configs/workloads/: long_context.json  mixed.json
publish/TileMEM_TilePO_V0_1_20260611/docs/: customer_integration_end_to_end_example_20260613.md  olmoe_integration_interface_benchmark_20260612.md  tilemem_checkpoint_integration.md  tilemem_python_sdk_quickstart.md  tilemem_tilepo_v0_1_priority_roadmap_20260611.md
publish/TileMEM_TilePO_V0_1_20260611/evidence/ablation/: tilepo_ablation_report.md  tilepo_ablation_run_config.json
publish/TileMEM_TilePO_V0_1_20260611/examples/: customer_integration_end_to_end.py  olmoe_external_cuda_backend.py  tilemem_checkpoint_integration.py  tilemem_industrial_quickstart.py
publish/TileMEM_TilePO_V0_1_20260611/include/tilemem/: config.h  io_engine.h  memory_manager.h  metrics.h  scheduler.h
publish/TileMEM_TilePO_V0_1_20260611/kernels/: fp4_gemm_sm120.cu  gemm_fp4.cu  gemm_fp6.cu  tilepo_moe_hot_tile_bf16.cu  tilepo_moe_hot_tile_fp8.cu
publish/TileMEM_TilePO_V0_1_20260611/paper/: tilemem_tilepo_v0_1_technical_report.md
publish/TileMEM_TilePO_V0_1_20260611/scripts/: package_release.sh  reproduce_adaptive_granularity.sh  setup_dev.sh  verify_artifact.sh
publish/TileMEM_TilePO_V0_1_20260611/src/: config.cc  fp4_gemm.cc  io_engine.cc  scheduler.cc  trace.cc
publish/TileMEM_TilePO_V0_1_20260611/tilemem/: sdk.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/: __init__.py  ablation.py  compiler.py  env.py  profiler.py  release.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/admission/: scheduler.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/backends/: cuda_backend.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/dsl/: __init__.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/kt_patch/: __init__.py  bootstrap.py  patch.py  sglang_hook.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/mir/: __init__.py  schema.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/profiling/: __init__.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/reporting/: __init__.py  ablation.py
publish/TileMEM_TilePO_V0_1_20260611/tilepo/runtime/: __init__.py  metrics.py  state.py
publish/TileMEM_TilePO_V0_1_20260611/tools/: benchmark_olmoe_integration_interface  run_tilepo_sweep  tilemem  tilemem_checkpoint_prepare  tilepo_admit  tilepo_compile_plan  tilepo_export_kt_hotset  tilepo_finalize_deployment  tilepo_merge_manifests  tilepo_render_plan  tmap_predict
(+126 files in other folders)
